[tool.poetry]
name = "elpis"
version = "0.1.5"
description = """\
  A library to perform automatic speech recognition with huggingface transformers.\
  """
readme = "README.md"
repository = "https://github.com/CoEDL/elpis_lib"
authors = ["Harry Keightley <harrykeightley@outlook.com>"]
keywords = ["Elpis", "huggingface", "ASR", "Automatic Speech Recognition", "CoEDL"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
transformers = "^4.23.1"
datasets = "^2.6.1"
loguru = "^0.6.0"
pympi-ling = "^1.70.2"
pedalboard = "^0.6.2"
librosa = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pyright = "^1.1.276"
black = "^22.10.0"
coverage = "^6.5.0"
pdoc3 = "^0.10.0"

[tool.pyright]
reportPrivateImportUsage = false

[tool.pytest.ini_options]
markers = [
  "integration: mark a test as integration (deselect with '-m \"not integration\"')",
]

[pytest]
mock_traceback_monkeypatch = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
